--- a/apps/message-ingest-service/project.json
+++ b/apps/message-ingest-service/project.json
@@ -1,5 +1,6 @@
 {
   "name": "message-ingest-service",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "targets": {
     "build": {
       "executor": "nx:run-commands",
@@ -14,6 +15,10 @@
         "command": "chmod +x mvnw && sh ./mvnw spring-boot:run",
         "cwd": "apps/message-ingest-service"
       }
+    },
+    "docker-build": {
+      "dependsOn": ["build"],
+      "command": "docker build -f apps/message-ingest-service/Dockerfile . -t message-ingest-service"
     }
   }
 }
