--- a/apps/message-api-service/src/main/resources/application.properties
+++ b/apps/message-api-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=message-api-service
 
 # Database configuration
-spring.datasource.url=jdbc:h2:${H2_DB_PATH:./data/h2/bo-payment-routing-plateform}
+spring.datasource.url=jdbc:h2:${H2_DB_PATH:./data/h2/bo-payment-routing-plateform};DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -16,3 +16,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+# IBM MQ
+ibm.mq.queueManager=QM1
+ibm.mq.channel=DEV.ADMIN.SVRCONN
+ibm.mq.connName=ibmmq(1414)
+ibm.mq.user=admin
+ibm.mq.password=passw0rd
+spring.artemis.mode=embedded
