fix ibmmq properties, add service and listener tests

--- a/apps/message-api-service/src/main/resources/application.properties
+++ b/apps/message-api-service/src/main/resources/application.properties
@@ -17,10 +17,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
+
 # IBM MQ
 ibm.mq.queueManager=QM1
 ibm.mq.channel=DEV.ADMIN.SVRCONN
-ibm.mq.connName=ibmmq(1414)
+ibm.mq.connName=${IBM_MQ_CONN_NAME:localhost(1414)}
 ibm.mq.user=admin
 ibm.mq.password=passw0rd
 spring.artemis.mode=embedded
