--- a/apps/partner-api-service/pom.xml
+++ b/apps/partner-api-service/pom.xml
@@ -31,7 +31,8 @@
     <lombok.version>1.18.30</lombok.version>
     <org.mapstruct.version>1.6.3</org.mapstruct.version>
     <org.springdoc.version>2.5.0</org.springdoc.version>
-	</properties>
+    <org.hibernate.validator.version>8.0.1.Final</org.hibernate.validator.version>
+  </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -65,6 +66,11 @@
     <dependency>
       <groupId>jakarta.validation</groupId>
       <artifactId>jakarta.validation-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>${org.hibernate.validator.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
