--- a/apps/backoffice-payment-frontend/project.json
+++ b/apps/backoffice-payment-frontend/project.json
@@ -8,12 +8,16 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/backoffice-payment-frontend",
         "index": "apps/backoffice-payment-frontend/src/index.html",
         "browser": "apps/backoffice-payment-frontend/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/backoffice-payment-frontend/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -22,7 +26,10 @@
             "input": "apps/backoffice-payment-frontend/public"
           }
         ],
-        "styles": ["apps/backoffice-payment-frontend/src/styles.scss"],
+        "styles": [
+          "@angular/material/prebuilt-themes/azure-blue.css",
+          "apps/backoffice-payment-frontend/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -72,7 +79,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/backoffice-payment-frontend/jest.config.ts"
       }
@@ -86,7 +95,9 @@
       }
     },
     "docker-build": {
-      "dependsOn": ["build"],
+      "dependsOn": [
+        "build"
+      ],
       "command": "docker build -f apps/backoffice-payment-frontend/Dockerfile . -t backoffice-payment-frontend"
     }
   }
