--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.8",
     "@angular/common": "~19.2.0",
     "@angular/compiler": "~19.2.0",
     "@angular/core": "~19.2.0",
     "@angular/forms": "~19.2.0",
+    "@angular/material": "^19.2.8",
     "@angular/platform-browser": "~19.2.0",
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
+    "@ngrx/signals": "^19.1.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -44,6 +47,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "20.7.0",
+    "openapi-typescript": "^7.6.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
