fix docker port exposed

--- a/apps/partner-api-service/src/main/resources/application.properties
+++ b/apps/partner-api-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=partner-api-service
+server.port=8084
 
 # Database configuration
 spring.datasource.url=jdbc:h2:${H2_DB_PATH:./data/h2/bo-payment-routing-plateform-partner};DB_CLOSE_ON_EXIT=FALSE
