--- a/apps/message-api-service/src/main/resources/application.properties
+++ b/apps/message-api-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=message-api-service
+server.port=8082
 
 # Database configuration
 spring.datasource.url=jdbc:h2:${H2_DB_PATH:./data/h2/bo-payment-routing-plateform};DB_CLOSE_ON_EXIT=FALSE
