--- a/apps/partner-api-service/src/main/resources/application.properties
+++ b/apps/partner-api-service/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+# Application
+partner.max-results=500
